--- a/backend/config/sync/core.entity_form_display.node.product.default.yml
+++ b/backend/config/sync/core.entity_form_display.node.product.default.yml
@@ -19,7 +19,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 125
+    weight: 8
     region: content
     settings:
       rows: 9
@@ -29,13 +29,13 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
   field_product_category:
     type: entity_reference_autocomplete
-    weight: 124
+    weight: 10
     region: content
     settings:
       match_operator: CONTAINS
@@ -45,7 +45,7 @@ content:
     third_party_settings: {  }
   field_product_name:
     type: string_textfield
-    weight: 122
+    weight: 6
     region: content
     settings:
       size: 60
@@ -53,14 +53,14 @@ content:
     third_party_settings: {  }
   field_product_price:
     type: number
-    weight: 123
+    weight: 9
     region: content
     settings:
       placeholder: ''
     third_party_settings: {  }
   field_product_subtitle:
     type: string_textfield
-    weight: 126
+    weight: 7
     region: content
     settings:
       size: 60
@@ -68,42 +68,34 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 15
+    weight: 2
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 120
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 16
+    weight: 3
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
-  title:
-    type: string_textfield
-    weight: -5
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 0
     region: content
     settings:
       match_operator: CONTAINS
@@ -111,4 +103,5 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  title: true
