--- a/backend/config/sync/field.field.node.product.body.yml
+++ b/backend/config/sync/field.field.node.product.body.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: product
 label: 'Product Description'
 description: ''
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
