--- a/backend/config/sync/core.entity_form_display.node.product.default.yml
+++ b/backend/config/sync/core.entity_form_display.node.product.default.yml
@@ -5,11 +5,13 @@ dependencies:
   config:
     - field.field.node.product.body
     - field.field.node.product.field_product_category
+    - field.field.node.product.field_product_images
     - field.field.node.product.field_product_name
     - field.field.node.product.field_product_price
     - field.field.node.product.field_product_subtitle
     - node.type.product
   module:
+    - media_library
     - path
     - text
 id: node.product.default
@@ -42,6 +44,13 @@ content:
       match_limit: 10
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  field_product_images:
+    type: media_library_widget
+    weight: 26
+    region: content
+    settings:
+      media_types: {  }
     third_party_settings: {  }
   field_product_name:
     type: string_textfield
