--- a/backend/config/sync/core.entity_view_display.node.product.default.yml
+++ b/backend/config/sync/core.entity_view_display.node.product.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.product.body
     - field.field.node.product.field_product_category
+    - field.field.node.product.field_product_images
     - field.field.node.product.field_product_name
     - field.field.node.product.field_product_price
     - field.field.node.product.field_product_subtitle
@@ -31,6 +32,15 @@ content:
       link: true
     third_party_settings: {  }
     weight: 5
+    region: content
+  field_product_images:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+    weight: 6
     region: content
   field_product_name:
     type: string
