--- a/backend/config/sync/core.entity_view_display.node.product.teaser.yml
+++ b/backend/config/sync/core.entity_view_display.node.product.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.product.body
     - field.field.node.product.field_product_category
+    - field.field.node.product.field_product_images
     - field.field.node.product.field_product_name
     - field.field.node.product.field_product_price
     - field.field.node.product.field_product_subtitle
@@ -25,6 +26,7 @@ content:
 hidden:
   body: true
   field_product_category: true
+  field_product_images: true
   field_product_name: true
   field_product_price: true
   field_product_subtitle: true
